# diff-match-patch.rs

./: Cargo.toml  PERF.md  README  README.md
.github/workflows/: ci.yml
crates/dmp/: Cargo.toml  LICENSE  PERF.md
crates/dmp-bench/: Cargo.toml
crates/dmp-bench/benches/: dmp.rs
crates/dmp-bench/src/: lib.rs
crates/dmp/src/: cleanup.rs  delta.rs  diff.rs  engine.rs  match_.rs  patch.rs  tokenize.rs  types.rs
crates/dmp/tests/: golden.rs  grapheme.rs  props.rs  word_mode.rs
crates/dmp/tests/golden/: corpus.json
diff_match_patch/: Cargo.toml
diff_match_patch/benches/: dmp.rs
diff_match_patch/oracle/: generate.mjs
diff_match_patch/src/: cleanup.rs  diff.rs  dmp.rs  engine.rs  lib.rs  main.rs  match_.rs  patch.rs  percent_encoding.rs  tokenize.rs  types.rs
diff_match_patch/tests/: bug_fixes.rs  characterization.rs  integration_test.rs
diff_match_patch_test/: Cargo.toml
diff_match_patch_test/src/: main.rs
projects/: word-diff.md
src/: dmp.rs
tests/: integration_test.rs
