[package]
name = "rusty_diff_match_patch"
version = "0.1.0"
authors = ["mahmoud-eltahawy <gemmy9300@gmail.com>"]
edition = "2021"
description = "diff_match_patch fork with rusty interface."
homepage = "https://github.com/mahmoud-eltahawy/diff-match-patch"
repository = "https://github.com/mahmoud-eltahawy/diff-match-patch"
keywords = ["diff", "diff-match-patch"]
categories = ["Development tools", "Text processing"]
license = "MIT"


[dependencies]
url = "1.7.2"
regex = "1.3.7"
