[package]
name = "diff_match_patch"
version = "0.3.0"
authors = [
    "chandan <chandanmahi1998@gmail.com>",
    "ajit <ajit@distill.io>",
]
edition = "2021"
rust-version = "1.73"
description = "A fast Rust port of Neil Fraser's diff-match-patch — diff, match, and patch for plain text."
homepage = "https://github.com/distill-io/diff-match-patch.rs"
repository = "https://github.com/distill-io/diff-match-patch.rs"
documentation = "https://docs.rs/diff_match_patch"
keywords = ["diff", "diff-match-patch", "patch", "myers", "text"]
categories = ["text-processing", "algorithms"]
license = "MIT"
readme = "../../README.md"
# Dev-time artifacts kept out of the published crate: the vendored Apache-2.0
# oracle and the test suite (with its golden corpus).
exclude = ["oracle/", "tests/"]

# Document every feature (grapheme mode) on docs.rs, not just the default build.
[package.metadata.docs.rs]
all-features = true

[lib]
bench = false

[features]
# Grapheme-cluster segmentation support (Segmentation::Grapheme). Off by
# default: char mode is fully Unicode-correct without it; this only adds
# cluster-atomic diffing and the segmentation tables it needs.
grapheme = ["dep:unicode-segmentation"]

[dependencies]
percent-encoding = "2"
unicode-segmentation = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
